<resources>
    <!-- Tela Principal -->
    <string name="markets">Markets</string>

    <!-- Tela de Login -->

    <string name="user_email">Email</string>

    <string name="reset_password">Forgot passaword?</string>
    <string name="reset_email">Forgot E-mail?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>

    <string name="app_name">Welcome to my app</string>
    <string name="signUp">Sign Up</string>
    <string name="email"> E-mail*</string>
    <string name="password"> Password</string>
    <string name="singIn">Sing in</string>
    <string name="forgotEmail">Forgot email?</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="login_error">Email or password invalid</string>
    <string name="register">Welcome to Register</string>

    <!-- Tela de Cadastro -->
    <string name="signup_first_name_label">First Name *</string>
    <string name="signup_last_name_label">Last Name *</string>
    <string name="signup_email_label">E-mail *</string>
    <string name="signup_id_number_label">ID Number *</string>
    <string name="signup_user_first_name">Insert your first name</string>
    <string name="signup_user_last_name">Insert your last name</string>
    <string name="signup_email">Insert your e-mail</string>
    <string name="signup_id_number">Insert your ID Number (numbers only)</string>
    <string name="signup_phone_label">Phone Number *</string>
    <string name="signup_phone">+55 (99) 99999-9999</string>
    <string name="signup_password_label">Password *</string>
    <string name="signup_confirm_password_label">Confirm your Password *</string>
    <string name="register_acc">Register</string>

    <string name="name">Name*</string>
    <string name="surname">Surname*</string>
    <string name="cpf">CPF*</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="creating_account">Creating Account</string>

    <string name="enterName">Enter Your Name</string>
    <string name="enterSurname">Digite o seu sobrenome</string>
    <string name="enterEmail">Digite o seu Email</string>
    <string name="enterCpf">Digite o seu CPF</string>
    <string name="enterPhoneNumber">Digite o seu Celular</string>
    <string name="enterPassword">Digite sua Senha</string>
    <string name="enterPasswordConfirm">Confirme sua senha</string>



    <!-- Tela de Busca -->
    <string name="search_label">Search Product</string>
    <string name="products_label">Products</string>

    <!-- Tela de Produtos -->
    <string name="add_to_cart">Add to Cart</string>"

    <!-- Erros de Autenticação -->
    <string name="on_success">User successfully created!</string>
    <string name="on_failure">Error creating user</string>
    <string name="error_saving_data">Error saving user"</string>
    <string name="login_failure">Incorrect email or password</string>

    <!-- Drawer Menu -->
    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_service_orders">Service Orders</string>
    <string name="menu_logout">Logout</string>

</resources>