<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity"
    android:background="@color/white">


  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="260dp"
      android:scaleType="fitXY"
      android:src="@drawable/forma"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <ImageView
      android:layout_width="190dp"
      android:layout_height="25dp"
      android:scaleType="fitXY"
      android:src="@drawable/fim_feira"
      app:layout_constraintBottom_toBottomOf="@+id/imageView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.41000003" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="354dp"
      android:layout_height="370dp"
      android:gravity="center"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.428"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.74">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTextEmail"
        style="@style/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTextPassword"
        style="@style/inputSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/myButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/singIn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        style="@style/myButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/signUp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/forgotEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/esqueceu"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/forgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/esqueceu"/>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>